--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.11",
     "random-string": "^0.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
