Changes to be committed: 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://phamhuuan.github.io/todolist/",
+  "homepage": "http://phamhuuan.freevnn.com/",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
