--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://phamhuuan.github.io/todolist",
+  "homepage": "https://phamhuuan-todolist.netlify.com/",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
